# cmake-sfml-project

./: .gitignore  .gitmodules  CMakeLists.txt  Info.plist.in  LICENSE.md  README.md  requirements.md  shell.nix
.github/workflows/: ci.yml  release.yml
PINN/: base.py  inference.py  model_trial-10000.pt  model_trial-100000.pt  training.py
include/: App.h  Application.h  Display.h  IMenuItem.h  MutationListener.h  SceneRenderer.h  SplineSequence.h  TrajectoryManager.h
include/tools/: CodeGenerator.h  TrajectoryManager.h
include/ui/: ITool.h  Window.h
include/ui/tools/: Code.h  Editor.h  Graph.h
src/: App.cpp  Application.cpp  Display.cpp  Farmer.cpp  IMenuItem.cpp  Makefile  SceneRenderer.cpp  SplineSequence.cpp  TrajectoryManager.cpp  forces.hpp  main  main.cpp  particle.hpp
src/Controller/: FarmerController.cpp  GameController.cpp
src/Model/: Alien.cpp  BackgroundGrid.cpp  Character.cpp  Farmer.cpp
src/tools/: CodeGenerator.cpp  TrajectoryManager.cpp
src/ui/: Window.cpp
src/ui/tools/: Code.cpp  Editor.cpp  Graph.cpp
src/view/: Land.png.import  LandSelected.png.import  Level1.tscn  character_body_2d.tscn  icon.svg.import  pla2D03.tmp  player.tscn  project.godot  testFarmer.png.import  test_button.tscn
src/view/.godot/editor/: Level1.tscn-folding-a88b6384daa3a4bcf424d50a6e4f94a4.cfg  editor_layout.cfg  filesystem_cache8  project_metadata.cfg
src/view/.godot/imported/: testFarmer.png-d08f7e8aa9efa86218950694191de727.ctex  testFarmer.png-d08f7e8aa9efa86218950694191de727.md5
src/view/art/: House In a Forest Loop.ogg.import  enemyFlyingAlt_1.png.import  enemyFlyingAlt_2.png.import  enemySwimming_1.png.import  enemySwimming_2.png.import  enemyWalking_1.png.import  enemyWalking_2.png.import  farmland.png.import  gameover.wav.import  playerGrey_up1.png.import  playerGrey_up2.png.import  playerGrey_walk1.png.import  playerGrey_walk2.png.import
src/view/fonts/: Xolonium-Regular.ttf.import
